@@ -26,7 +26,7 @@ package io.github.mtrevisan.boxon.core.parsers;
 
 import io.github.mtrevisan.boxon.annotations.Checksum;
 import io.github.mtrevisan.boxon.annotations.Evaluate;
-import io.github.mtrevisan.boxon.annotations.MessageHeader;
+import io.github.mtrevisan.boxon.annotations.TemplateHeader;
 import io.github.mtrevisan.boxon.annotations.bindings.BindArray;
 import io.github.mtrevisan.boxon.annotations.bindings.BindArrayPrimitive;
 import io.github.mtrevisan.boxon.annotations.bindings.BindBitSet;
@@ -43,11 +43,12 @@ import io.github.mtrevisan.boxon.annotations.checksummers.CRC16CCITT;
 import io.github.mtrevisan.boxon.annotations.checksummers.Checksummer;
 import io.github.mtrevisan.boxon.annotations.converters.Converter;
 import io.github.mtrevisan.boxon.core.codecs.LoaderCodec;
-import io.github.mtrevisan.boxon.core.helpers.templates.BoundedField;
 import io.github.mtrevisan.boxon.core.helpers.templates.EvaluatedField;
 import io.github.mtrevisan.boxon.core.helpers.templates.Template;
+import io.github.mtrevisan.boxon.core.helpers.templates.TemplateField;
 import io.github.mtrevisan.boxon.exceptions.AnnotationException;
 import io.github.mtrevisan.boxon.io.ByteOrder;
+import io.github.mtrevisan.boxon.utils.TestHelper;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
@@ -60,46 +61,26 @@ import java.util.List;
 import java.util.Map;
 
 
-@SuppressWarnings("ALL")
 class TemplateTest{
 
-	private static class Mask{
+	private record Mask(byte mask){
 
-		static class MaskConverter implements Converter<Byte, Mask>{
-			@Override
-			public Mask decode(final Byte value){
-				return new Mask(value);
+			static class MaskConverter implements Converter<Byte, Mask>{
+				@Override
+				public Mask decode(final Byte value){
+					return new Mask(value);
+				}
+
+				@Override
+				public Byte encode(final Mask value){
+					return value.mask;
+				}
 			}
 
-			@Override
-			public Byte encode(final Mask value){
-				return value.mask;
-			}
-		}
-
-
-		private final byte mask;
-
-
-		Mask(byte mask){
-			this.mask = mask;
-		}
 
 		boolean hasProtocolVersion(){
-			return hasBit(mask, 2);
-		}
-
-		/**
-		 * Checks whether the given {@code mask} has the bit at {@code index} set.
-		 *
-		 * @param mask	The value to check the bit into.
-		 * @param index	The index of the bit (rightmost is zero). The value can range between {@code 0} and {@link Byte#SIZE}.
-		 * @return	The state of the bit at a given index in the given byte.
-		 */
-		private static boolean hasBit(final byte mask, final int index){
-			final int bitMask = 1 << (index % Byte.SIZE);
-			return ((mask & bitMask) != 0);
-		}
+				return TestHelper.hasBit(mask, 2);
+			}
 
 	}
 
@@ -111,20 +92,20 @@ class TemplateTest{
 		byte build;
 	}
 
-	@MessageHeader(start = "+", end = "-")
+	@TemplateHeader(start = "+", end = "-")
 	private static class Message{
 
-		private final Map<Byte, String> MESSAGE_TYPE_MAP = new HashMap<>();
+		private final Map<Byte, String> messageTypeMap = new HashMap<>(2);
 
 		class MessageTypeConverter implements Converter<Byte, String>{
 			@Override
 			public String decode(final Byte value){
-				return MESSAGE_TYPE_MAP.get(value);
+				return messageTypeMap.get(value);
 			}
 
 			@Override
 			public Byte encode(final String value){
-				for(final Map.Entry<Byte, String> elem : MESSAGE_TYPE_MAP.entrySet()){
+				for(final Map.Entry<Byte, String> elem : messageTypeMap.entrySet()){
 					if(elem.getValue().equals(value))
 						return elem.getKey();
 				}
@@ -133,8 +114,8 @@ class TemplateTest{
 		}
 
 		Message(){
-			MESSAGE_TYPE_MAP.put((byte)0, "AT+GTBSI");
-			MESSAGE_TYPE_MAP.put((byte)1, "AT+GTSRI");
+			messageTypeMap.put((byte)0, "AT+GTBSI");
+			messageTypeMap.put((byte)1, "AT+GTSRI");
 		}
 
 		@BindByte(converter = Mask.MaskConverter.class)
@@ -172,7 +153,7 @@ class TemplateTest{
 
 	}
 
-	@MessageHeader(start = "++", end = "--")
+	@TemplateHeader(start = "++", end = "--")
 	private static class MessageChild extends Message{
 		@BindInt
 		private int anotherNumberInt;
@@ -188,23 +169,23 @@ class TemplateTest{
 
 		Assertions.assertNotNull(template);
 		Assertions.assertEquals(Message.class, template.getType());
-		MessageHeader header = template.getHeader();
+		TemplateHeader header = template.getHeader();
 		Assertions.assertNotNull(header);
 		Assertions.assertArrayEquals(new String[]{"+"}, header.start());
 		Assertions.assertEquals("-", header.end());
 		Assertions.assertTrue(template.canBeCoded());
-		List<BoundedField> boundedFields = template.getBoundedFields();
-		Assertions.assertNotNull(boundedFields);
-		Assertions.assertEquals(14, boundedFields.size());
-		List<EvaluatedField> evaluatedFields = template.getEvaluatedFields();
+		List<TemplateField> templateFields = template.getTemplateFields();
+		Assertions.assertNotNull(templateFields);
+		Assertions.assertEquals(14, templateFields.size());
+		List<EvaluatedField<Evaluate>> evaluatedFields = template.getEvaluatedFields();
 		Assertions.assertNotNull(evaluatedFields);
 		Assertions.assertEquals(1, evaluatedFields.size());
-		EvaluatedField evaluatedField = evaluatedFields.get(0);
+		EvaluatedField<Evaluate> evaluatedField = evaluatedFields.getFirst();
 		Assertions.assertEquals("receptionTime", evaluatedField.getFieldName());
 		Assertions.assertEquals(ZonedDateTime.class, evaluatedField.getFieldType());
 		Evaluate evaluate = evaluatedField.getBinding();
 		Assertions.assertEquals("T(java.time.ZonedDateTime).now()", evaluate.value());
-		BoundedField checksumField = template.getChecksum();
+		TemplateField checksumField = template.getChecksum();
 		Assertions.assertNotNull(checksumField);
 		Assertions.assertEquals("checksum", checksumField.getFieldName());
 		Annotation checksum = checksumField.getBinding();
@@ -257,15 +238,15 @@ class TemplateTest{
 
 		Assertions.assertNotNull(template);
 		Assertions.assertEquals(MessageChild.class, template.getType());
-		MessageHeader header = template.getHeader();
+		TemplateHeader header = template.getHeader();
 		Assertions.assertNotNull(header);
 		Assertions.assertArrayEquals(new String[]{"++"}, header.start());
 		Assertions.assertEquals("--", header.end());
 		Assertions.assertTrue(template.canBeCoded());
-		List<BoundedField> boundedFields = template.getBoundedFields();
-		Assertions.assertNotNull(boundedFields);
-		Assertions.assertEquals(15, boundedFields.size());
-		BoundedField childField = boundedFields.get(boundedFields.size() - 1);
+		List<TemplateField> templateFields = template.getTemplateFields();
+		Assertions.assertNotNull(templateFields);
+		Assertions.assertEquals(15, templateFields.size());
+		TemplateField childField = templateFields.getLast();
 		Assertions.assertNotNull(childField);
 		Assertions.assertEquals("anotherNumberInt", childField.getFieldName());
 	}
